# movie-manager

./: .dockerignore  .env.example  .gitignore  .keep-list.json  Dockerfile  README.md  TRUENAS_DEPLOYMENT.md  deleter.py  docker-compose.yml  entrypoint.sh  filter.py  keep_list.py  pyproject.toml  radarr_client.py  radarr_horror_filter.py  requirements.txt  scanner.py  test_filter.py  test_interactive_selection.py  test_keep_list.py
.omc/: ralplan-state.json
.omc/plans/: keep-list-feature.md  radarr-horror-filter.md
